adjusted for java6